--- a/src/components/BigNumbers/BigNumbers.css
+++ b/src/components/BigNumbers/BigNumbers.css
@@ -1,5 +1,9 @@
-/* .time-tabmenuitem .nav-link {
-    font-size: 0.6rem;
-    line-height: 0.5;
-    padding: 1px 1px; 
-} */
+.BigNumbers{
+    margin-right: 14px;
+}
+.big-numbers__btn{
+    background-color: #a6a6a6;
+    color: #000;
+    width: 100%;
+    margin-bottom: 7px;
+}
